# Search-First-Agent

./: .env.example  .gitignore  LICENSE  README.md  langgraph.json  pyproject.toml  requirements.txt  run_search_agent.py
src/agent/: __init__.py  graph.py  state.py
src/prompts/: __init__.py  chitchat.py  planner.py  post_search.py  router.py  search.py
src/simple_agent/: __init__.py  graph.py  state.py
src/tools/: __init__.py
src/wrapper/: search_agent.py  search_agent_executor.py
